chore(cards/events): fix card images not displaying on firefox (#1092)

--- a/src/StockportWebapp/wwwroot/assets/sass/stockroom/modules/_card.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockroom/modules/_card.scss
@@ -43,11 +43,9 @@
         &__image {
             max-height: max-content;
             border-radius: 20px 20px 0 0 !important;
-            height: 100%;
             width: 100%;
             aspect-ratio: 1;
             object-fit: cover;
-            flex-basis: 0;
             
             @media #{$tablet-only} {
                 min-height: min-content;
