--- a/src/StockportWebapp/wwwroot/assets/sass/stockroom/modules/_eventDetail.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockroom/modules/_eventDetail.scss
@@ -124,5 +124,6 @@
         color: black;
         width: fit-content;
         margin-bottom: 1em;
+        display: block;
     }
 }
